--- a/hw04/D3/index.html
+++ b/hw04/D3/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <title>My project</title>
-        <script type = "text/javascript" src = "https://d3js.org/d3.v3.min.js"></script>
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <svg class="chart"></svg>
-        <script type="text/javascript" src="script.js"></script>
-    </body>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <title>My project</title>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script> -->
+    <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <link href="style.css" rel="stylesheet">
+    <style>
+
+    </style>
+</head>
+
+<body>
+
+    <h3>Population bar chart</h3>
+    <div class="partb-population-chart"></div>
+    <br />
+    <h3>GDP bar chart</h3>
+    <div class="partb-gdp-chart"></div>
+    <script type="text/javascript" src="partb.js"></script>
+</body>
+
 </html>
