--- a/hw04/partB_1_2_3/index.html
+++ b/hw04/partB_1_2_3/index.html
@@ -17,11 +17,14 @@
 
 <body>
 
-    <h3>Population bar chart</h3>
+    <h2>Part B1: Population bar chart</h2>
     <div class="partb-population-chart"></div>
     <br />
-    <h3>GDP bar chart</h3>
+    <h2>Part B2: GDP bar chart</h2>
     <div class="partb-gdp-chart"></div>
+    <br />
+    <h2>Part B3: opulation vs GDP Scatter Plot</h2>
+    <div class="partb-pop-gdp-scatter"></div>
     <script type="text/javascript" src="partb.js"></script>
 </body>
 
