--- a/hw04/partB_1_2_3/index.html
+++ b/hw04/partB_1_2_3/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>My project</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script> -->
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-    <script type="text/javascript" src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script type="text/javascript" src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
     <link href="style.css" rel="stylesheet">
     <style>
 
